--- a/css/link-hover.css
+++ b/css/link-hover.css
@@ -1,5 +1,6 @@
 /* General button style (reset) */
 .btn {
+	z-index: 3;
 	border: none;
 	font-family: inherit;
 	font-size: inherit;
@@ -36,11 +37,18 @@
 .btn-3 {
 	color: #422544;
 }
+.btn-4 {
+	color: #fff;
+}
 .btn-1:hover, .btn-2:hover, .btn-3:hover {
 	color: white !important;
 }
+
+.btn-4:hover {
+	color: #422544;
+}
 /* Button 1e */
-.btn-1e,.btn-2e, .btn-3e {
+.btn-1e,.btn-2e, .btn-3e, .btn-4e {
 	overflow: hidden;
 }
 .btn-1e:hover,
@@ -48,28 +56,31 @@
 .btn-2e:hover,
 .btn-2e:active,
 .btn-3e:hover,
-.btn-3e:active {
+.btn-3e:active,
+.btn-4e:hover,
+.btn-4e:active  {
 	color: #0e83cd;
 }
-.btn-1e:hover:after,.btn-2e:hover:after,.btn-3e:hover:after {
+.btn-1e:hover:after,.btn-2e:hover:after,.btn-3e:hover:after, .btn-4e:hover:after {
 	height: 260%;
 	opacity: 1;
 }
-.btn-1e:active:after,.btn-2e:active:after,.btn-3e:active:after {
+.btn-1e:active:after,.btn-2e:active:after,.btn-3e:active:after, .btn-4e:active:after {
 	height: 400%;
 	opacity: 1;
 }
-.btn-1e:after, .btn-2e:after, .btn-3e:after {
+.btn-1e:after, .btn-2e:after, .btn-3e:after, .btn-4e:after {
 	width: 100%;
 	height: 0;
 	top: 50%;
 	left: 50%;
 	opacity: 0;
-	-webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	-moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	-ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	-webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+	-moz-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+	-ms-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+	transform: translateX(-50%) translateY(-50%) rotate(0deg);
 }
 .btn-1e:after { background: #526EF2; }
 .btn-2e:after { background: #5DCF5B; }
 .btn-3e:after { background: #422544; }
+.btn-4e:after { background: #fff; }
