--- a/css/loops/loops.css
+++ b/css/loops/loops.css
@@ -1,76 +1,212 @@
-/*
-Syntax error: Undefined mixin 'bp-medium'.
-        on line 118 of /Users/yiannis/Desktop/valtira/sass/vars-modules/variables.scss, in `bp-medium'
-        from line 118 of /Users/yiannis/Desktop/valtira/sass/vars-modules/variables.scss
-        from line 1 of /Users/yiannis/Desktop/valtira/sass/loops/loops.scss
+/* MIXINS
+============================================= */
+/* line 59, ../../sass/mixins/mixins.scss */
+html, body {
+  height: 100%;
+}
 
-Backtrace:
-/Users/yiannis/Desktop/valtira/sass/vars-modules/variables.scss:118:in `bp-medium'
-/Users/yiannis/Desktop/valtira/sass/vars-modules/variables.scss:118
-/Users/yiannis/Desktop/valtira/sass/loops/loops.scss:1
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:249:in `visit_mixin'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:224:in `visit_import'
-org/jruby/RubyArray.java:2336:in `collect'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:224:in `visit_import'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2336:in `collect'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:107:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:126:in `visit_root'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:98:in `visit'
-org/jruby/RubyKernel.java:2096:in `send'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/visitors/perform.rb:7:in `visit'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/tree/root_node.rb:20:in `render'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/engine.rb:315:in `_render'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/sass-3.2.1/lib/sass/engine.rb:262:in `render'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `compile'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `compile'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `run'
-org/jruby/RubyArray.java:1603:in `each'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:147:in `recompile'
-org/jruby/RubyMethod.java:133:in `call'
-org/jruby/RubyProc.java:268:in `call'
-org/jruby/RubyProc.java:228:in `call'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/path.rb:73:in `run_callback'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/path.rb:55:in `callback_action'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/path.rb:35:in `update'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/state/directory.rb:39:in `modified'
-org/jruby/RubyArray.java:1603:in `each'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/state/directory.rb:37:in `modified'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/state/directory.rb:18:in `refresh'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `run'
-org/jruby/RubyArray.java:1603:in `each'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:17:in `run'
-org/jruby/RubyKernel.java:1419:in `loop'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/backends/polling.rb:15:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm/monitor.rb:26:in `run'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/fssm-0.2.9/lib/fssm.rb:70:in `monitor'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:87:in `perform'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Applications/Scout.app/Contents/Resources/vendor/gems/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Applications/Scout.app/Contents/Resources/bin/compass:12:in `(root)'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined mixin 'bp-medium'.\A         on line 118 of /Users/yiannis/Desktop/valtira/sass/vars-modules/variables.scss, in `bp-medium'\A         from line 118 of /Users/yiannis/Desktop/valtira/sass/vars-modules/variables.scss\A         from line 1 of /Users/yiannis/Desktop/valtira/sass/loops/loops.scss"; }
+/* line 62, ../../sass/mixins/mixins.scss */
+#wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+}
+/* line 66, ../../sass/mixins/mixins.scss */
+#wrapper #container {
+  padding: 0 0 30px 0;
+}
+
+/* line 70, ../../sass/mixins/mixins.scss */
+#footer {
+  height: 30px;
+}
+
+/*  VARIABLES
+============================================= */
+/* CLEARFIX
+============================================= */
+/* SCROLL UP BTN
+============================================= */
+/* line 290, ../../sass/vars-modules/variables.scss */
+#cd-nav ul {
+  /* mobile first */
+  position: fixed;
+  width: 90%;
+  max-width: 400px;
+  right: 5%;
+  bottom: 20px;
+  visibility: hidden;
+  overflow: hidden;
+  z-index: 1;
+  transform: scale(0);
+  transform-origin: 100% 100%;
+  transition: transform 0.3s, visibility 0s 0.3s;
+}
+
+/* line 306, ../../sass/vars-modules/variables.scss */
+#cd-nav ul.is-visible {
+  visibility: visible;
+  transform: scale(1);
+  transition: transform 0.3s, visibility 0s 0s;
+}
+
+/* line 312, ../../sass/vars-modules/variables.scss */
+.cd-nav-trigger {
+  position: fixed;
+  bottom: 20px;
+  right: 5%;
+  width: 44px;
+  height: 44px;
+  /* image replacement */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  z-index: 2;
+}
+
+/* BURGER ANIMATION
+============================================= */
+/* line 330, ../../sass/vars-modules/variables.scss */
+.c-hamburger {
+  position: fixed;
+  overflow: hidden;
+  margin: 0;
+  z-index: 9;
+  padding: 0;
+  right: 0;
+  top: 0;
+  width: 60px;
+  height: 56px;
+  font-size: 0;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+/* line 349, ../../sass/vars-modules/variables.scss */
+.c-hamburger:focus {
+  outline: none;
+}
+
+/* line 353, ../../sass/vars-modules/variables.scss */
+.c-hamburger span {
+  display: block;
+  position: absolute;
+  top: 24px;
+  left: 18px;
+  right: 18px;
+  height: 2px;
+  background: white;
+}
+
+/* line 364, ../../sass/vars-modules/variables.scss */
+.c-hamburger span::before,
+.c-hamburger span::after {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  content: "";
+}
+
+/* line 374, ../../sass/vars-modules/variables.scss */
+.c-hamburger span::before {
+  top: -10px;
+}
+
+/* line 378, ../../sass/vars-modules/variables.scss */
+.c-hamburger span::after {
+  bottom: -10px;
+}
+
+/* line 382, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx {
+  background-color: #422544;
+}
+
+/* line 386, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx span {
+  transition: background 0s 0.3s;
+}
+
+/* line 391, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx span::before,
+.c-hamburger--htx span::after {
+  transition-duration: 0.3s, 0.3s;
+  transition-delay: 0.3s, 0s;
+}
+
+/* line 396, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx span::before {
+  transition-property: top, transform;
+}
+
+/* line 400, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx span::after {
+  transition-property: bottom, transform;
+}
+
+/* active state, i.e. menu open */
+/* line 405, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx.is-active {
+  background-color: #5dcf5b;
+}
+
+/* line 409, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx.is-active span {
+  background: none;
+}
+
+/* line 413, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx.is-active span::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+/* line 418, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx.is-active span::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
+/* line 424, ../../sass/vars-modules/variables.scss */
+.c-hamburger--htx.is-active span::before,
+.c-hamburger--htx.is-active span::after {
+  transition-delay: 0s, 0.3s;
+}
+
+/* ============================================================
+  SECTIONS
+============================================================ */
+/* line 433, ../../sass/vars-modules/variables.scss */
+div.breakers.cloud-based {
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+/* line 9, ../../sass/loops/loops.scss */
+.social-facebook {
+  background-image: url("/img/facebook.svg");
+}
+
+/* line 9, ../../sass/loops/loops.scss */
+.social-googleplus {
+  background-image: url("/img/googleplus.svg");
+}
+
+/* line 9, ../../sass/loops/loops.scss */
+.social-twitter {
+  background-image: url("/img/twitter.svg");
+}
+
+/* line 9, ../../sass/loops/loops.scss */
+.social-linkedin {
+  background-image: url("/img/linkedin.svg");
+}
