--- a/css/slitslider.css
+++ b/css/slitslider.css
@@ -335,15 +335,24 @@
     width: 100%;
     text-align: center;
     left: 0;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
+    font-weight: 100;
+    letter-spacing: 2px;
+    font-size: 24px;
+    line-height: 35px;
     height: 70px;
     color: #8b8b8b;
     z-index: 2;
     bottom: 50%;
-    margin: 0 0 -153px 0;
+    margin: 0 0 -89px 0;
     padding: 0;
+}
+
+@media screen and (max-width: 650px) {
+    .demo-1 .sl-slide blockquote {
+    font-size: 14px;
+    line-height: 25px;
+    top:43%;
+    }
 }
 
 .demo-1 .sl-slide blockquote p{
@@ -370,11 +379,12 @@
 
 .demo-1 .sl-slide blockquote cite {
     font-size: 10px;
-    /* padding-top: 10px; */
+    padding-top: 10px;
     display: inline-block;
     font-style: normal;
     text-transform: uppercase;
     letter-spacing: 4px;
+    line-height: 21px;
 }
 
 /* Custom background colors for slides in first demo */
