--- a/sass/vars-modules/variables.scss
+++ b/sass/vars-modules/variables.scss
@@ -1,3 +1,5 @@
+@import 'mixins/mixins.scss';
+
 /*  VARIABLES
 ============================================= */
 
@@ -20,106 +22,177 @@ $link-hovered: #381E3A;
 /* CLEARFIX
 ============================================= */
 
+%inner-header-blocks {
+  position: relative;
+  top: 60px;
+}
+
+%cardContent {
+  @extend %mainFont;
+  @extend %mainFontSize;
+  @extend %alignLeft;
+  padding: 20px;
+  letter-spacing: 1px;
+  line-height: 30px;
+}
+
+%alignLeft {
+  text-align: left;
+}
+
+%mainFont {
+  font-family: Open Sans;
+}
+
+%mainFontSize {
+  font-size: 17px;
+}
+
+%cardHeader {
+  @extend %mainFont;
+  padding: 0 0 0 20px;
+  font-size: 29px;
+  font-weight: 600;
+}
+
 %leftCard {
-    width: 100%;
-    background: orange;
-    height: 400px;
+  width: 100%;
+  background: orange;
+  height: 400px;
 }
 
 %gray-bg {
-    padding: 30px;
-    background: #F1F4F9;
+  padding: 30px;
+  background: #F1F4F9;
 }
 
 %rightCard {
-    width: 100%;
-    background: seagreen;
-    height: 400px;
+  width: 100%;
+  background: seagreen;
+  height: 400px;
 }
 
-%noMargins { padding:0 !important }
-
-%noPadding { margin:0 !important }
-
 %down-button {
-    border-radius: 50%;
-    border: 2px solid #fff;
-    height: 70px;
-    width: 70px;
-    position: absolute;
-    top: 90%;
-    cursor: pointer;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+  border-radius: 50%;
+  border: 2px solid #fff;
+  height: 70px;
+  width: 70px;
+  position: absolute;
+  top: 90%;
+  cursor: pointer;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 %reset-H1 {
-    font-size: 45px;
-    letter-spacing: 2px;
+  @extend %mainFont;
+  font-size: 45px;
+  letter-spacing: 2px;
 }
 
 %page-Header {
-    font-size: 60px;
-    letter-spacing: 2px;
+  font-size: 60px;
+  letter-spacing: 2px;
 }
 
 %purple-buttons {
-    color: $valpurp;
-    border: 2px solid $valpurp !important;
+  color: $valpurp;
+  border: 2px solid $valpurp !important;
+  // over-ride bootstrap button styles
+}
+
+%white-buttons {
+  color: $valwhte;
+  border: 2px solid $valwhte !important;
+  // over-ride bootstrap button styles
 }
 
 %red-buttons {
-    color: $valred;
-    border: 2px solid $valred !important;
+  color: $valred;
+  border: 2px solid $valred !important;
+  // over-ride bootstrap button styles
 }
 
 %green-buttons {
-    color: $valgreen;
-    border: 2px solid $valgreen !important;
+  color: $valgreen;
+  border: 2px solid $valgreen !important;
+  // over-ride bootstrap button styles
 }
 
 %blue-buttons {
-    color: $valblue;
-    border: 2px solid $valblue !important;
+  color: $valblue;
+  border: 2px solid $valblue !important;
+  // over-ride bootstrap button styles
 }
 
 %content-blocks {
-    padding: 80px 0;
-    background:$transparent;
+  padding: 53px 0;
+  width: 100%;
+  margin:0 auto !important;
+  text-align: center;
+  height: 450px;
+  background: $transparent;
 }
 
 %header-blocks {
-    padding: 30em 0;
-    background: transparent;
-    margin: auto;
-    text-align: center;
+  padding: 30em 0;
+  background: transparent;
+  margin: auto;
+  text-align: center;
 }
 
 %footer-blocks {
-    padding: 50px 0;
-    background:$transparent;
+  padding: 50px 0;
+  background: $transparent;
 }
 
 %content-blocks-h3 {
-    font-size: 25px;
-    font-weight: 100;
-    letter-spacing: 3px;
-    line-height:35px;
+  font-size: 25px;
+  font-weight: 100;
+  letter-spacing: 3px;
+  line-height:35px;
 }
 
 %header-blocks-h3 {
-    font-size: 45px;
-    font-weight: 100;
-    letter-spacing: 3px;
-    line-height:75px;
+  font-size: 45px;
+  font-weight: 100;
+  letter-spacing: 3px;
+  line-height:75px;
 }
 
-@include bp-medium {
+@include bp-mediumz {
+
+    %content-blocks {
+    padding: 10px 0;
+    }
+
+    %tiny-underline-left {
+    margin: 0 auto !important;
+    }
+
+    %cardHeader {
+    @extend %mainFont;
+    padding: 0;
+    padding-bottom: 10px;
+    }
+
+    %cardContent {
+    padding:10px;
+    letter-spacing: 2px;
+    line-height: 26px;
+    font-weight: 200;
+    text-align: center;
+    }
+
+    %mainFontSize {
+    font-size: 16px;
+    }
 
     %header-blocks-h3, %content-blocks-h3 {
     font-size: 17px;
-    line-height: 33px;
+    letter-spacing: 2px;
+    line-height: 30px;
     font-weight: 200;
     @include transition(0.2s);
     }
@@ -131,37 +204,46 @@ $link-hovered: #381E3A;
     }
 
     %reset-H1  {
+    line-height: 35px;
     font-size: 25px;
     @include transition(0.8s);
     }
 }
 
 %footer-social {
-    margin-top: 0;
-    height: 0px;
-    padding: 0;
+  margin-top: 0;
+  height: 0px;
+  padding: 0;
 }
 
 %footer-links {
-    display: inline;
-    list-style-type: none;
-    padding: 8px;
-    margin:0 auto;
-    letter-spacing: 2px;
-    font-size: 18px;
-    font-weight: 100;
-    color: $valwhte;
+  display: inline;
+  list-style-type: none;
+  padding: 8px;
+  margin:0 auto;
+  letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: 100;
+  color: $valwhte;
 }
 
 %inset {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 %tiny-underline {
-    width: 75px;
-    height: 2px;
-    margin: 0 auto;
-    margin-top:20px;
+  width: 75px;
+  height: 2px;
+  margin: 0 auto;
+  margin-top:20px;
+}
+
+%tiny-underline-left {
+  width: 75px;
+  height: 2px;
+  /* text-align: left; */
+  margin: 0; // resets margin
+  margin: 20px 0 0 20px;
 }
 
 %tiny-underline-wht { background:$valwhte;  }
@@ -341,4 +423,16 @@ $link-hovered: #381E3A;
 .c-hamburger--htx.is-active span::before,
 .c-hamburger--htx.is-active span::after {
   transition-delay: 0s, 0.3s;
+}
+
+
+/* ============================================================
+  SECTIONS
+============================================================ */
+
+div.breakers.cloud-based {
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
