--- a/sass/vars-modules/variables.scss
+++ b/sass/vars-modules/variables.scss
@@ -136,7 +136,7 @@ $link-hovered: #381E3A;
 }
 
 %header-blocks {
-  padding: 30em 0;
+  padding: 20em 0;
   background: transparent;
   margin: auto;
   text-align: center;
@@ -212,19 +212,11 @@ $link-hovered: #381E3A;
 
 %footer-social {
   margin-top: 0;
-  height: 0px;
   padding: 0;
 }
 
 %footer-links {
-  display: inline;
   list-style-type: none;
-  padding: 8px;
-  margin:0 auto;
-  letter-spacing: 2px;
-  font-size: 18px;
-  font-weight: 100;
-  color: $valwhte;
 }
 
 %inset {
@@ -427,7 +419,7 @@ $link-hovered: #381E3A;
 
 
 /* ============================================================
-  SECTIONS
+  SECTIONS parallax
 ============================================================ */
 
 div.breakers.cloud-based {
@@ -435,4 +427,68 @@ div.breakers.cloud-based {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+}
+
+/* ============================================================
+  SHOW hidden BTN
+============================================================ */
+
+#cd-nav ul {
+  /* mobile first */
+  position: fixed;
+  width: 90%;
+  max-width: 400px;
+  right: 5%;
+  bottom: 20px;
+  visibility: hidden;
+  overflow: hidden;
+  z-index: 1;
+
+  transform: scale(0);
+  transform-origin: 100% 100%;
+  transition: transform 0.3s, visibility 0s 0.3s;
+}
+
+#cd-nav ul.is-visible {
+  visibility: visible;
+  transform: scale(1);
+  transition: transform 0.3s, visibility 0s 0s;
+}
+
+.cd-nav-trigger {
+  position: fixed;
+  bottom: 20px;
+  right: 5%;
+  width: 44px;
+  height: 44px;
+
+  /* image replacement */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  z-index: 2;
+}
+
+@media only screen and (min-width: 1170px) {
+  #cd-nav ul {
+    /* the navigation moves to the top */
+    position: absolute;
+    width: auto;
+    max-width: none;
+    bottom: auto;
+    top: 36px;
+    visibility: visible;
+    transform: scale(1);
+    transition: all 0s;
+  }
+
+  #cd-nav.is-fixed ul {
+    position: fixed;
+    width: 90%;
+    max-width: 400px;
+    bottom: 20px;
+    top: auto;
+    visibility: hidden;
+    transform: scale(0);
+  }
 }
