--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,51 +61,63 @@ small {
 
 /* HEADER / NESTING / INVERT COLORS
 ============================================= */
-
-nav.header-nav {
-    height: 30px;
+.brand {
     position: absolute;
-    top: 20px;
+    left: 0;
+}
+
+.brand span.valtiraTxt {
+    position: relative;
+    top:-5px;
+    letter-spacing: 1px;
+}
+nav.topNav {
+    height: 30px;
+    background: rgba(255, 255, 255, 0.3);
     text-align: center;
-    margin:0 auto;
-    background:transparent;
+    position: absolute;
+    height: 56px;
+    top: 0;
     width: 100%;
-    z-index: 8;
+
         ul {
-        background: transparent;
-        }
+        z-index: 5;
+        width: 780px;
+        height: 56px;
+        text-align: center;
+        position: relative;
+        top: 0;
+        display: inline-block;
+
             li {
-            list-style-type: none;
-            display: inline;
-            }
-                a {
-                padding:0 12px;
-                font-size: 20px;
-                color: #fff;
-                font-weight: 100;
-                letter-spacing: 2px;
-                color: set-button-text-color(black);
-                }
-
-}
-
-nav.whitebg li a {
-    color: set-button-text-color(white);
-}
-
-.header-nav a:hover {
-    text-decoration: none;
-    color: gray;
-    opacity: 0.9;
-    @include transition(0.2s);
-}
-
-@include bp-mediumz {
-    .header-nav {
-        display: none;
+            cursor: pointer;
+            padding: 15px;
+            color: $valwhte;
+            height: 56px;
+            display: inline-block;
+        }
     }
 }
 
+nav.whitebg ul li {
+    color: sfc(orange, black);
+
+}
+
+@media screen and (max-width: 700px) {
+   nav.topNav ul {
+        width: 500px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+   nav.topNav ul {
+        width: 400px;
+    }
+    nav.topNav ul li:not(.brand) {
+        display: none;
+    }
+}
 
 /* CLASSES
 ============================================= */
@@ -202,6 +214,23 @@ nav.whitebg li a {
 .header-blocks > h2 {
     @extend %page-Header;
     @extend %inset;
+}
+
+.lower-links {
+    text-align: center;
+    margin-left: -4em;
+    position: relative;
+    top: 20px;
+}
+
+.lower-links li {
+    display: inline-block;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.lower-links li:hover {
+    color: orange;
 }
 
 .footer-social {
@@ -311,8 +340,18 @@ nav.whitebg li a {
     @extend %rightCard;
 }
 
-.card-descr > p {
+.card-descr > ul {
     @extend %cardContent;
+}
+
+.card-descr ul > li {
+    list-style-type: none;
+    /* float: left; */
+    /* padding: 0; */
+    /* padding: 0; */
+    /* padding: 0; */
+    padding: 5px 0 0 0;
+    /* height: 500px; */
 }
 
 .card-descr > h2 {
@@ -338,8 +377,17 @@ nav.whitebg li a {
     min-height: 350px;
     padding: 10px;
     margin: 10px;
+    @include transition(0.2s);
 }
 
+.card:hover {
+    opacity: 0.8;
+}
+
+.card a {
+        text-decoration: none;
+
+}
 .card-img {
     background: $valwhte;
     width: 530px;
@@ -371,7 +419,6 @@ nav.whitebg li a {
     }
 }
 
-
 /* IDs
 ============================================= */
 
@@ -381,14 +428,6 @@ nav.whitebg li a {
     color: sfc($valwhte, black);
 }
 
-#valtLogo {
-    position:fixed;
-    left: 30px;
-    top: 10px;
-    z-index: 100;
-    width: 60px;
-}
-
 #mainbox{
     box-sizing: border-box;
     justify-content: center;
@@ -396,3 +435,10 @@ nav.whitebg li a {
     flex-wrap: wrap;
     @extend %cardContent;
 }
+
+#valtLogo {
+    width: 50px;
+    position: relative;
+    top: -5px;
+}
+
