--- a/sass/main.scss
+++ b/sass/main.scss
@@ -51,12 +51,8 @@ body {
 small {
     font-size: 80%;
     position: relative;
-    top: 80px;
+    top: 45px;
     letter-spacing: 2px;
-    /* margin-top: 30px; */
-    /* left: 50%; */
-    /* right: 50%; */
-    /* width: 300px; */
 }
 
 /* HEADER / NESTING / INVERT COLORS
@@ -64,12 +60,6 @@ small {
 .brand {
     position: absolute;
     left: 0;
-}
-
-.brand span.valtiraTxt {
-    position: relative;
-    top:-5px;
-    letter-spacing: 1px;
 }
 nav.topNav {
     height: 30px;
@@ -81,6 +71,7 @@ nav.topNav {
     width: 100%;
 
         ul {
+        margin-right: 3em;
         z-index: 5;
         width: 780px;
         height: 56px;
@@ -229,8 +220,15 @@ nav.whitebg ul li {
     padding: 10px;
 }
 
-.lower-links li:hover {
-    color: orange;
+.lower-links li a {
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: $valwhte;
+    @extend %mainFont;
+}
+
+.lower-links li a:hover {
+    color: $valblue;
 }
 
 .footer-social {
@@ -346,12 +344,7 @@ nav.whitebg ul li {
 
 .card-descr ul > li {
     list-style-type: none;
-    /* float: left; */
-    /* padding: 0; */
-    /* padding: 0; */
-    /* padding: 0; */
     padding: 5px 0 0 0;
-    /* height: 500px; */
 }
 
 .card-descr > h2 {
@@ -432,13 +425,22 @@ nav.whitebg ul li {
     box-sizing: border-box;
     justify-content: center;
     display: flex;
+    padding: 0;
     flex-wrap: wrap;
     @extend %cardContent;
 }
 
 #valtLogo {
     width: 50px;
-    position: relative;
-    top: -5px;
+    position: absolute;
+    top: 0.5em;
+    left: 1em;
 }
 
+.brand span.valtiraTxt {
+    position: absolute;
+    top: 1em;
+    left: 5.5em;
+    letter-spacing: 1px;
+    color: sfc($valwhte, black);
+}
