--- a/sass/main.scss
+++ b/sass/main.scss
@@ -195,14 +195,24 @@ nav.whitebg ul li {
     @extend %tiny-underline-prp;
 }
 
-.tiny-underline, .content-blocks > h3, .footer-blocks > h3 {  margin-top: 1em; }
+.tiny-underline, .content-blocks > p, .footer-blocks > p {
+    margin-top: 1em;
+    @extend %mainFontSize;
+    @include transition(0.4s);
+    @extend %mainFont;
+}
 
-.content-blocks > h2, .footer-blocks > h2 {
-    @extend %reset-H1;
+.footer-blocks > h3 {
+    font-size: 35px;
     @extend %inset;
 }
 
-.header-blocks > h2 {
+.content-blocks > h2, .footer-blocks > h2 {
+    @extend %content-blocks-h2;
+    @extend %inset;
+}
+
+.header-blocks > h1 {
     @extend %page-Header;
     @extend %inset;
 }
@@ -239,12 +249,12 @@ nav.whitebg ul li {
     display: inline-block;
 }
 
-.content-blocks > h3 {
-    @extend %content-blocks-h3;
+.content-blocks > h2 {
+    @extend %content-blocks-h2;
 }
 
-.header-blocks > h3 {
-    @extend %header-blocks-h3;
+.header-blocks > h2 {
+    @extend %header-blocks-h2;
 }
 
 .footer-links a:hover {
@@ -268,7 +278,7 @@ nav.whitebg ul li {
 .cloud-based {
     @include cover-background('../img/computer.png');
 }
-.cloud-based h2, .cloud-based h3 {
+.cloud-based .content-blocks > p, .cloud-based h2 {
     color: sfc($valwhte, black);
 }
 
@@ -309,6 +319,14 @@ nav.whitebg ul li {
     text-align: center;
 }
 
+.minimizedImg-left {
+    @extend %minimizedImg-left;
+}
+
+.minimizedImg-right {
+    @extend %minimizedImg-right;
+}
+
 .social-circles:hover {
     @include cover-background('../img/roll-googleplus.svg');
 }
@@ -332,10 +350,12 @@ nav.whitebg ul li {
 
 .left {
     @extend %leftCard;
+    @extend %left;
 }
 
 .right {
     @extend %rightCard;
+    @extend %right;
 }
 
 .card-descr > ul {
@@ -351,6 +371,92 @@ nav.whitebg ul li {
     @extend %cardHeader;
 }
 
+.card {
+    background: $valwhte;
+    width: 565px;
+    box-shadow: 1px 1px 3px #888;
+    min-height: 350px;
+    padding: 10px;
+    position: relative;
+    margin: 10px;
+    @include transition(0.2s);
+}
+
+.card a {
+    text-decoration: none;
+}
+
+.card-img {
+    background: $valwhte;
+    width: 530px;
+    box-shadow: 1px 1px 3px #888;
+    min-height: 350px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.gray-bg {
+    @extend %gray-bg;
+}
+
+#triangle-left {
+    position: absolute;
+    /* right: 20px; */
+    /* height: 30px; */
+    border-top: 400px solid transparent;
+    border-right: 47px solid white;
+    /* border-bottom: 0px solid transparent; */
+    left: -47px;
+    z-index: 3;
+    top: 0;
+}
+
+#triangle-left {
+    position: absolute;
+    /* right: 20px; */
+    /* height: 30px; */
+    border-top: 400px solid transparent;
+    border-right: 47px solid white;
+    /* border-bottom: 0px solid transparent; */
+    left: -47px;
+    z-index: 3;
+    top: 0;
+}
+
+#triangle-topleft {
+    position: absolute;
+    right: -45px;
+    top: 0;
+    width: 0;
+    height: 0;
+    border-top: 401px solid $valwhte;
+    border-right: 45px solid transparent;
+    z-index: 2;
+}
+
+/* IDs
+============================================= */
+
+#footer {
+    background: $valpurp;
+    height: 410px;
+    color: sfc($valwhte, black);
+}
+
+#mainbox {
+    box-sizing: border-box;
+    margin: 0 0 20px 0;
+    padding: 0;
+    @extend %cardContent;
+}
+
+#valtLogo {
+    width: 50px;
+    position: relative;
+    left: 10px;
+    top: 10px;
+}
+
 #mainbox .card-img1 {
     @include cover-background("../img/services/stock1.png");
 }
@@ -363,84 +469,51 @@ nav.whitebg ul li {
     @include cover-background("../img/services/stock3.jpg");
 }
 
-.card {
-    background: $valwhte;
-    width: 530px;
-    box-shadow: 1px 1px 3px #888;
-    min-height: 350px;
-    padding: 10px;
-    margin: 10px;
-    @include transition(0.2s);
-}
-
-.card:hover {
-    opacity: 0.8;
-}
-
-.card a {
-        text-decoration: none;
-
-}
-.card-img {
-    background: $valwhte;
-    width: 530px;
-    box-shadow: 1px 1px 3px #888;
-    min-height: 350px;
-    padding: 10px;
-    margin: 10px;
-}
-
-@media screen and (max-width: 707px) {
-    .card{
-    margin: 10px -15px;
-    }
-}
-
-.gray-bg {
-    @extend %gray-bg;
-}
-
-@media screen and (max-width: 991px) {
-    .card{
-        width: 360px;
-    }
-}
-
-@include bp-smlarge {
-    .card{
-        width: 450px;
-    }
-}
-
-/* IDs
+/* QUERIES
 ============================================= */
 
-#footer {
-    background: $valpurp;
-    height: 410px;
-    color: sfc($valwhte, black);
+@include bp-smlarge {
+    #mainbox {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .card {
+        width: 47%;
+    }
 }
 
-#mainbox{
-    box-sizing: border-box;
-    justify-content: center;
-    display: flex;
-    padding: 0;
-    flex-wrap: wrap;
-    @extend %cardContent;
+@media screen and (max-width: 1035px) {
+    #mainbox {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .card {
+        width: 46.5%;
+    }
 }
 
-#valtLogo {
-    width: 50px;
-    position: absolute;
-    top: 0.5em;
-    left: 1em;
-}
+@media screen and (max-width: 645px) {
 
-.brand span.valtiraTxt {
-    position: absolute;
-    top: 1em;
-    left: 5.5em;
-    letter-spacing: 1px;
-    color: sfc($valwhte, black);
+    #triangle-left, #triangle-topleft {
+    display: none;
+    }
+
+    .minimizedImg-left,
+    .minimizedImg-right  {
+      float: left;
+      min-height: 350px;
+      position: static;
+    }
+    .card {
+        width: 100%;
+        float: none;
+        margin: auto;
+        margin: 5px 0;
+    }
+      #mainbox {
+        padding:0;
+    }
+    .gray-bg {
+        padding: 15px;
+    }
 }
