--- a/sass/vars-modules/variables.scss
+++ b/sass/vars-modules/variables.scss
@@ -22,6 +22,28 @@ $link-hovered: #381E3A;
 /* CLEARFIX
 ============================================= */
 
+%left {
+  float: left;
+}
+
+%minimizedImg-left {
+  height: 300px !important;
+  position: relative;
+  top: 20px;
+  left: 16px;
+}
+
+%minimizedImg-right {
+  height: 300px !important;
+  position: relative;
+  top: 20px;
+  right: 16px;
+}
+
+%right {
+  float: right;
+}
+
 %inner-header-blocks {
   position: relative;
   top: 60px;
@@ -45,7 +67,7 @@ $link-hovered: #381E3A;
 }
 
 %mainFontSize {
-  font-size: 17px;
+  font-size: 22px;
 }
 
 %cardHeader {
@@ -56,7 +78,7 @@ $link-hovered: #381E3A;
 }
 
 %leftCard {
-  width: 100%;
+  width: 300px;
   background: orange;
   height: 400px;
 }
@@ -67,7 +89,7 @@ $link-hovered: #381E3A;
 }
 
 %rightCard {
-  width: 100%;
+  width: 300px;
   background: seagreen;
   height: 400px;
 }
@@ -147,14 +169,21 @@ $link-hovered: #381E3A;
   background: $transparent;
 }
 
-%content-blocks-h3 {
+%footer-blocks-h3 {
   font-size: 25px;
   font-weight: 100;
   letter-spacing: 3px;
   line-height:35px;
 }
 
-%header-blocks-h3 {
+%content-blocks-h2 {
+  font-size: 35px;
+  font-weight: 100;
+  letter-spacing: 3px;
+  line-height:35px;
+}
+
+%header-blocks-h2 {
   font-size: 45px;
   font-weight: 100;
   letter-spacing: 3px;
@@ -189,8 +218,13 @@ $link-hovered: #381E3A;
     font-size: 16px;
     }
 
-    %header-blocks-h3, %content-blocks-h3 {
-    font-size: 17px;
+    .content-blocks > p,
+    .footer-blocks > p {
+    @extend %cardContent;
+    }
+
+    %header-blocks-h2, %content-blocks-h2 {
+    font-size: 25px;
     letter-spacing: 2px;
     line-height: 30px;
     font-weight: 200;
@@ -320,55 +354,55 @@ $link-hovered: #381E3A;
 ============================================= */
 
 .c-hamburger {
-    position: fixed;
-    overflow: hidden;
-    margin: 0;
-    z-index: 9;
-    padding: 0;
-    right: 0;
-    top:0;
-    width: 60px;
-    height: 56px;
-    font-size: 0;
-    appearance: none;
-    box-shadow: none;
-    border-radius: none;
-    border: none;
-    cursor: pointer;
-    transition: background 0.3s;
+  position: fixed;
+  overflow: hidden;
+  margin: 0;
+  z-index: 9;
+  padding: 0;
+  right: 0;
+  top:0;
+  width: 60px;
+  height: 56px;
+  font-size: 0;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
 .c-hamburger:focus {
-    outline: none;
+  outline: none;
 }
 
 .c-hamburger span {
-    display: block;
-    position: absolute;
-    top: 24px;
-    left: 18px;
-    right: 18px;
-    height: 2px;
-    background: white;
+  display: block;
+  position: absolute;
+  top: 24px;
+  left: 18px;
+  right: 18px;
+  height: 2px;
+  background: white;
 }
 
 .c-hamburger span::before,
 .c-hamburger span::after {
-    position: absolute;
-    display: block;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    content: "";
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  content: "";
 }
 
 .c-hamburger span::before {
-    top: -10px;
+  top: -10px;
 }
 
 .c-hamburger span::after {
-    bottom: -10px;
+  bottom: -10px;
 }
 
 .c-hamburger--htx {
